<resources>
    <string name="app_name">Minesweeper</string>
    <string name="play">Играть</string>
    <string name="title">Cапёр</string>
    <string name="chooseDifficulty">Выберите\nсложность</string>
    <string name="easyButton">Легко</string>
    <string name="mediumButton">Средне</string>
    <string name="hardButton">Сложно</string>
    <string name="marks"> 🚩 </string>
    <string name="timer"> 🕛 </string>
    <string name="score">Рекорд: </string>
    <string name="about">Об игре</string>
    <string name="howToPlay">Как играть</string>
    <string name="desc">Игровое поле состоит из клеток. Нажатие на экран открывает клетку. Клетка может содержать цифру от 1 до 8. Каждая цифра означает количество мин, расположенных на клеточках, соседствующих с уже открытой вами. Игрок считается победителем, если ему удается открыть все клеточки минного поля, кроме тех в которых расположены мины. Зажатие на клетке позволяет поставить на неё метку, чтобы избежать случайного ее открытия. Если вокруг открытой клетки с цифрой уже стоит количество меток равное этой цифре, то при нажатии на нее, оставшиеся соседние клетки откроются. Будьте осторожны, если метки стояли неправильно, клетка с миной тоже откроется.</string>
</resources>