<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DifficultyActivity">
    <View
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#60C946"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/chooseDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseDifficulty"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowColor="#000000"
        android:shadowDx="9"
        android:shadowDy="8"
        android:shadowRadius="10"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:fontFamily="@font/architun_medium"
/>

    <androidx.appcompat.widget.AppCompatButton
        android:backgroundTint="#385B45"
        android:id="@+id/easyButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/easyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:shadowColor="#000000"
        android:shadowDx="9"
        android:shadowDy="8"
        android:shadowRadius="10"
        android:textAllCaps="true"
        android:fontFamily="@font/architun_medium"
        android:background="@drawable/layout_bg"
        app:layout_constraintTop_toBottomOf="@+id/chooseDifficulty" />

    <androidx.appcompat.widget.AppCompatButton
        android:backgroundTint="#385B45"
        android:id="@+id/mediumButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/mediumButton"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:shadowColor="#000000"
        android:shadowDx="9"
        android:shadowDy="8"
        android:shadowRadius="10"
        android:textAllCaps="true"
        android:fontFamily="@font/architun_medium"
        android:background="@drawable/layout_bg"
        app:layout_constraintTop_toBottomOf="@+id/easyScore" />

    <androidx.appcompat.widget.AppCompatButton
        android:backgroundTint="#385B45"
        android:id="@+id/hardButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/hardButton"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:shadowColor="#000000"
        android:shadowDx="9"
        android:shadowDy="8"
        android:shadowRadius="10"
        android:textAllCaps="true"
        android:fontFamily="@font/architun_medium"
        android:background="@drawable/layout_bg"
        app:layout_constraintTop_toBottomOf="@+id/mediumScore" />

    <TextView
        android:id="@+id/easyScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:shadowColor="#000000"
        android:shadowDx="9"
        android:shadowDy="8"
        android:shadowRadius="10"
        android:textAllCaps="true"
        android:fontFamily="@font/architun_medium"
        app:layout_constraintTop_toBottomOf="@+id/easyButton" />

    <TextView
        android:id="@+id/mediumScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/score"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:shadowColor="#000000"
        android:shadowDx="9"
        android:shadowDy="8"
        android:shadowRadius="10"
        android:textAllCaps="true"
        android:fontFamily="@font/architun_medium"
        app:layout_constraintTop_toBottomOf="@+id/mediumButton" />

    <TextView
        android:id="@+id/hardScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:shadowColor="#000000"
        android:shadowDx="9"
        android:shadowDy="8"
        android:shadowRadius="10"
        android:textAllCaps="true"
        android:fontFamily="@font/architun_medium"
        app:layout_constraintTop_toBottomOf="@+id/hardButton" />
</androidx.constraintlayout.widget.ConstraintLayout>