<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#60C946"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginTop="40dp"
        android:textSize="75sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowColor="#000000"
        android:shadowDx="9"
        android:shadowDy="8"
        android:shadowRadius="10"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:fontFamily="@font/motel_king"
/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/start"
        android:layout_marginTop="20dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:backgroundTint="#385B45"
        android:textColor="@color/white"
        android:id="@+id/playButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/layout_bg"
        android:fontFamily="@font/architun_medium"
        android:shadowColor="#000000"
        android:shadowDx="9"
        android:shadowDy="8"
        android:shadowRadius="10"
        android:text="@string/play"
        android:textAllCaps="true"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:backgroundTint="#385B45"
        android:id="@+id/aboutButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/layout_bg"
        android:fontFamily="@font/architun_medium"
        android:textColor="@color/white"
        android:shadowColor="#000000"
        android:shadowDx="9"
        android:shadowDy="8"
        android:shadowRadius="10"
        android:textAllCaps="true"
        android:textSize="50sp"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />


</androidx.constraintlayout.widget.ConstraintLayout>